--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -111,4 +111,10 @@
     font-weight: 900;
     font-style: italic;
   }
+
+  p{
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
   
